--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -1,4 +1,3 @@
-# Final stage: Python environment
 FROM python:3.10-slim
 WORKDIR /app
 COPY requirements.txt ./
@@ -6,4 +5,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 ENV FLASK_APP=app.py
 EXPOSE 5000
-CMD ["python", "__init__.py"]
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
