--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.2",
+    "pdf-lib": "^1.17.1",
+    "puppeteer": "^23.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "dotenv": "^16.4.5",
-    "pdf-lib": "^1.17.1",
-    "puppeteer": "^23.9.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
